<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Test Application</string>

    <string name="activity_title_motor">Motor Activity</string>
    <string name="activity_title_touch">Touch Activity</string>
    <string name="activity_title_LED">LED Activity</string>
    <string name="activity_title_buzzer">Buzzer Activity</string>
    <string name="activity_title_BLE">BLE Activity</string>
    <string name="activity_title_BLEDevice">BLE Device Activity</string>

    <string name="scan">Scan for devices</string>
    <string name="stop">STOP</string>
    <string name="send">SEND</string>
    <string name="reading">READING</string>
    <string name="clear">CLEAR</string>
    <string name="message">message</string>

    <string name="searching_filter_hint">Filter by name or Address</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>

    <string name="label_device_address">Device address :&#160;</string>
    <string name="label_data">Data:</string>
    <string name="label_state">State:</string>
    <string name="read_data">read data</string>
    <string name="no_data">No data</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="title_connect">connect</string>
    <string name="title_disconnect">disconnect</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to<xliff:g id="device_name">%1$s</xliff:g>
    </string>
</resources>
