<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BleDeviceActivity">


    <Button
        android:id="@+id/readData_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/read_data"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceAddress_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_device_address" />

            <TextView
                android:id="@+id/connectionState_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_connecting" />

        </LinearLayout>

        <Button
            android:id="@+id/connection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/title_disconnect" />

    </LinearLayout>

    <TextView
        android:id="@+id/state_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/stop"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/log_scrollView"
        android:layout_width="350dp"
        android:layout_height="350dp">

        <TextView
            android:id="@+id/log_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="16sp" />

    </ScrollView>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/clear" />

</LinearLayout>